# YiboVibe

./: .antigravityignore  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  PRODUCT.md  README.en.md  README.md  _write_api_service.py  _write_console_page.py  _write_login_page.py  _write_signal_client.py  check_braces.py  compatibility.json  dev.bat  dev.ps1  dev_silent.bat  dev_with_logs.bat  restart-mobile-silent.bat  restart-mobile.bat  server-sync-2026-04-30.tgz  start_sim_device2.bat  start_sim_device2.ps1  window_dump_after_wait.xml  window_dump_approval_force.xml  一键日常使用_RunYiboFlow.vbs  停止开发环境_StopDev.bat  停止日常使用_StopYiboFlow.bat  启动开发环境_StartDev.bat
.agents/workflows/: dev.md
.release-assets/: README.md  release-notes-v0.9.7-r1.md  release-notes-v0.9.7-user.md  release-notes-v0.9.7.md
YiboVibe-Mobile/: pubspec.yaml
YiboVibe-Mobile/lib/: main.dart
YiboVibe-Mobile/lib/pages/: console_page.dart  login_page.dart
YiboVibe-Mobile/lib/services/: signal_client.dart
core/: Cargo.toml  err.txt  error.txt
core/src/: api.rs  backup.rs  cache.rs  clipboard.rs  config.rs  content_stream.rs  crypto.rs  dictionary.rs  flow_entry.rs  flow_migration.rs  flow_store.rs  flow_transfer.rs  history.rs  hook_manager.rs  key_remap.rs  lib.rs  local_auth.rs  main.rs  p2p.rs  rules.rs  smart_router.rs  ws.rs
core/src/agent_host/: action_bar.rs  context.rs  factory.rs  heartbeat.rs  mod.rs  multi_agent.rs  recovery.rs  res_bridge.rs  runtime.rs  session.rs  vital_signs.rs
core/src/ai/: client.rs  mod.rs  prompt.rs
core/src/sync/: crypto.rs  mod.rs  packager.rs  transport.rs  vault.rs
core/src/writer/: mod.rs
desktop/: package-lock.json  package.json  run_vite.cmd  vite.config.ts
desktop/src/: App.css  App.tsx  i18n.ts  index.css  main.tsx
desktop/src-tauri/: 2  Cargo.toml  build.rs  err.txt  error.txt  tauri.conf.json  tauri.sim2.conf.json
desktop/src-tauri/capabilities/: default.json  hint.json  writer.json
desktop/src-tauri/src/: cmd_admin.rs  cmd_clipboard.rs  cmd_codex.rs  cmd_engineering.rs  cmd_flowsync.rs  cmd_probe.rs  cmd_rules.rs  cmd_settings.rs  cmd_terminal.rs  cmd_window.rs  codex_app_server.rs  lib.rs  probe.rs  terminal.rs  terminal_screen.rs
desktop/src-tauri/src/agent_bridge/: mod.rs
desktop/src/components/: CodexProbePanel.tsx  CustomSelect.tsx  Layout.tsx
desktop/src/config/: ideWorkbenches.ts
desktop/src/locales/: en.json  zh.json
desktop/src/pages/: Admin.tsx  Agents.tsx  AutoFill.tsx  Cloudboard.tsx  Dashboard.css  Dashboard.tsx  Exemptions.tsx  FlowDeck.tsx  FlowDrop.tsx  FlowHint.tsx  FlowInfo.tsx  FlowKeys.css  FlowKeys.tsx  FlowMind.tsx  FlowPredict.tsx  FlowProbe.css  FlowProbe.tsx  FlowProbeRelay.tsx  FlowProbeSources.tsx  FlowRules.tsx  FlowSnap.tsx  FlowSync.tsx  FlowWriter.tsx  HintWindow.tsx  Hub.tsx  Login.tsx  Predictor.tsx  Resources.tsx  Sessions.tsx  Settings.tsx  VibeConsole.css  VibeConsole.tsx  WriterWindow.css  WriterWindow.tsx
desktop/src/services/: aiWorkbench.ts  aiWorkbenchMock.ts  codexBridge.ts
desktop/src/utils/: errorDisplay.ts
docs/: NAS部署指南.md  account-permission-spec.md  ai-workbench-mobile-contract.md  ai-workbench-provider-plan.md  analysis_report.md  architecture-vibe-coding.md  archive-index.md  codex-mobile-control-options-temp-2026-05-27.md  documentation-index.md  features_summary.md  flow-modules-v2-mapping-2026-05-12.md  flow-sync-redesign.md  flowdeck-implementation-checklist.md  flowdeck-redesign-plan.md  flowprobe-ide-compatibility.md  flowprobe-rollout-checklist.md  flowprobe-two-page-redesign-plan-2026-05-08.md  flowsync-content-stream-technical-design-2026-05-01.md  flowsync-phase1-boundary-report-2026-05-01.md  flowsync-phase2-data-layer-report-2026-05-01.md  flowsync-phase3-dual-write-report-2026-05-01.md  flowsync-phase4-file-bundle-report-2026-05-02.md  flowsync-phase5-transfer-session-report-2026-05-02.md  flowsync-phase6-nas-staging-report-2026-05-02.md  flowsync-phase7-share-links-report-2026-05-04.md  flowsync-phase8-cutover-report-2026-05-04.md  flowsync-redesign.md  flowsync-refactor-execution-plan-2026-05-01.md  flowsync-regression-smoke-2026-05-04.md  flowsync-schema-migration-plan-2026-05-01.md  flowsync-transfer-integration-plan-2026-05-01.md  ide-workbench-expansion-guide.md  knowledge-harvesting-design-2026-05-12.md  mobile-ai-workbench-ui-plan-2026-05-28.md  mobile-closure-temp-2026-07-16.md  mobile-console-plan-2026-05-15.md  mobile-console-screen-mode-design-2026-05-22.md  mobile-desktop-mvp-plan-2026-05-14.md  mobile-desktop-mvp-smoke-checklist.md  mobile-ia-2026-05-16.md  (+19 more)
mobile/android/: README.md  pubspec.yaml  window_dump.xml  window_dump2.xml  window_dump3.xml  window_dump4.xml  window_dump5.xml  window_dump_after_approval_test.xml  window_dump_after_send.xml  window_dump_after_send_try2.xml  window_dump_codex.xml  window_dump_later.xml  window_dump_live.xml  window_dump_r46b.xml  window_dump_sent_clean.xml  window_dump_sessiontab.xml
mobile/android/lib/: app_version.dart  main.dart
mobile/android/scripts/: post-build.sh
mobile/android/test/: ai_workbench_model_test.dart  ai_workbench_sync_provider_test.dart  terminal_text_formatter_test.dart  widget_test.dart  workbench_message_widgets_test.dart  workbench_session_panel_test.dart  workbench_tool_selector_test.dart
mobile/android/web/: index.html  manifest.json
scripts/: stage-release-asset.ps1  test-vibe-console.ps1
server/: .dockerignore  .env.example  Caddyfile  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  golog.txt
server/cmd/clearusers/: main.go
server/cmd/yiboflow/: main.go
server/cmd/yibovibe/: main.go
server/internal/model/: device.go  staging.go  user.go
server/internal/relay/: relay.go
server/internal/repo/: device_repo.go  staging_repo.go  user_repo.go
server/internal/ws/: hub.go  (+4 more)
spikes/crypto_benchmark/: Cargo.toml
spikes/crypto_benchmark/benches/: crypto_benches.rs
spikes/crypto_benchmark/src/: lib.rs  main.rs
spikes/keyboard_hook/: Cargo.toml
spikes/keyboard_hook/src/: main.rs
spikes/server_docker/: docker-compose.yml
spikes/tauri_tray/: Cargo.toml
(+72 files in other folders)
