[package]
name = "yiboflow-core"
version = "0.6.1"
edition = "2024"

[dependencies]
# Async Runtime & Networking
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
native-tls = "0.2"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eventsource-stream = "0.2"
async-stream = "0.3"


# Cryptography (From Spike 1)
argon2 = "0.5.3"
aes-gcm = "0.10.3"
rand = "0.8.5"
base64 = "0.22.1"

# OS System Tray Integration (From Spike 3)
tray-icon = "0.14"
tao = "0.30"
arboard = "3.4"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
uuid = { version = "1.21.0", features = ["v4"] }
directories = "6.0.0"
zip = "0.6.6"
walkdir = "2.4"
chrono = "0.4.38"
rand_core = "0.10.0"
hex = "0.4.3"
sha2 = "0.10.9"
urlencoding = "2.1.3"

# Win32 OS Hooks (From Spike 2)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_Input_Ime",
    "Win32_Globalization",
    "Win32_Graphics_Gdi"
] }

# Error Handling & Utils
thiserror = "1.0"
lazy_static = "1.4.0"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
