[package]
name = "crypto_prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
# Using RustCrypto as the generic provider
argon2 = "0.5.3"
aes-gcm = "0.10.3"
rand = "0.8.5"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Using ring for benchmarking (Optional)
# ring = "0.17.8"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "crypto_benches"
harness = false
