[package]
name = "keyboard_hook"
version = "0.1.0"
edition = "2021"

[dependencies]
# We'll use Windows API directly via windows-rs to get LowLevelKeyboardProc
# in order to detect key presses globally and handle IME states.
windows = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader"
] }

lazy_static = "1.4.0"
tokio = { version = "1.0", features = ["full"] }
